Test/git-issues/git-issue-2111.dfy.expect
git-issue-2111.dfy(6,4): Error: wrong number of arguments (datatype constructor 'C' expects 1, got 0)
1 resolution/type errors detected in git-issue-2111.dfy
